--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     
     <label for="colorLineas">Color de las líneas:</label>
     <input type="color" id="colorLineas" value="#00ff00" onchange="cambiarColorLineas()">
+    
+    <label for="colorNumeros">Color de los números:</label>
+    <input type="color" id="colorNumeros" value="#000000" onchange="cambiarColorNumeros()">
   
     <canvas id="miCanvas" width="600" height="900" style="border:1px solid #000;" name="tablero"></canvas>
   </div>
