se trabaja en el js

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <!-- Botón para descargar la imagen -->
         <button class="btn btn-primary" onclick="descargarImagen()">Descargar Imagen</button>
       </div>
+    </div>
+  </div>
   
   <script src="script.js"></script>
   
