se trabaja en el js

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <input class="form-control" type="number" id="valor" placeholder="valor (máx. 40 caracteres)" maxlength="100" oninput="cambiarValor()"></li>
             
           <li><label for="valor">Imagen:</label>
-             <input class="form-control" type="file" id="imagenFondoInput" accept="image/*" onchange="cargarImagenDeFondo()"></li>
+             <input class="form-control" type="file" id="imagenFondoInput" accept="image/*" onchange="dibujarCuadricula()"></li>
   
           <!-- Botón para descargar la imagen -->
           <li><button class="btn btn-primary m-3" onclick="descargarImagen()">Descargar Imagen</button></li>
